# goon

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  shell.nix  tailwind.config.js
.github/workflows/: cd.yml  ci.yml  testing.yml
core/: settings.py
core/core/tests/: test_collections.py  test_misc.py
core/core/tests/fixtures/: __init__.py  deep_update.py
core/core/utils/: collections.py  misc.py  pytest.py  settings.py
core/portfolio/: admin.py  apps.py  models.py  urls.py  views.py
core/portfolio/migrations/: 0001_initial.py  0002_remove_clothes_name.py
core/portfolio/templates/: home.html
core/portfolio/tests/: test_models.py
core/portfolio/tests/fixtures/: __init__.py  category.py  clothe.py  filename.py
core/project/: settings.py  urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  logging.py
core/project/settings/templates/: settings.dev.py  settings.unittests.py
core/shop/: apps.py  urls.py  views.py
core/static/CACHE/css/: output.0a50e4943a0e.css  output.0cd65d8dcb34.css  output.10661533abcb.css  output.21bde563a3f2.css  output.27b008228aaf.css  output.2d6942acbca4.css  output.3015bbb474f9.css  output.31a29e6c3f9c.css  output.32f87b6c7fdc.css  output.360a0898d18c.css  output.3806be466a98.css  output.3b6b7483e0ba.css  output.4a69426cf53b.css  output.4e4d890d2475.css  output.5543fc8ff98f.css  output.58656f290dc2.css  output.60334a51288f.css  output.60b2a54451df.css  output.6d9b723cdb30.css  output.6e8981791d1b.css  output.6f38c9474d5b.css  output.6fdf6db96730.css  output.7351752b2eb5.css  output.748c5745823d.css  output.77b87b1eee0f.css  output.82b056363e9c.css  output.82d4ea685c3c.css  output.8e963113e627.css  output.8f3562b42f79.css  output.9272a719f512.css  output.99d21a140eac.css  output.9a8ed5c0d93a.css  output.9b77cd59b87e.css  output.a0811fdb70e6.css  output.b0924f5ada8b.css  output.b374442c8d26.css  (+17 more)
core/static/custom/: custom.css
core/static/src/: output.css
core/templates/: base.html
core/templates/components/: navbar.html
core/templates/head/: css.html
core/templates/pages/: home.html  portfolio.html  shop.html
portfolio/: models.py  tests.py
portfolio/migrations/: 0001_initial.py
scripts/: entrypoint.sh
